DONE: Correct flickers on Home Project.

--- a/src/style/object/home/_project.scss
+++ b/src/style/object/home/_project.scss
@@ -16,8 +16,11 @@
 
         .inner {
             position: relative;
+            max-width: 100%;
+            max-height: 100vh;
             width: 100%;
-            height: 100%;
+            height: 100vh;
+            overflow: hidden;
         }
     }
 }
@@ -63,7 +66,7 @@
         max-height: 100%;
         height: 100%;
         overflow: scroll;
-        padding: x(.5);
+        padding: x(1);
 
         color: $black;
 
